tests/baselines/reference/functionTypeArgumentAssignmentCompat.errors.txt
tests/cases/compiler/functionTypeArgumentAssignmentCompat.ts(9,1): error TS2322: Type '<S>() => S[]' is not assignable to type '<T>(x: T) => T'.
  Type 'unknown[]' is not assignable to type 'T'.
    'unknown[]' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.


==== tests/cases/compiler/functionTypeArgumentAssignmentCompat.ts (1 errors) ====
    var f : {
     <T>(x:T): T;
    }
    
    var g : {
     <S>() : S[];
    } = () => [];
    
    f = g;
    ~
!!! error TS2322: Type '<{|S|0|}>() => {|S|1|}[]' is not assignable to type '<{|T|2|}>(x: {|T|3|}) => {|T|4|}'.
!!! error TS2322:   Type 'unknown[]' is not assignable to type '{|T|5|}'.
!!! error TS2322:     'unknown[]' is assignable to the constraint of type '{|T|6|}', but '{|T|7|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/compiler/functionTypeArgumentAssignmentCompat.ts:6:3
!!! annotated symbol 1 tests/cases/compiler/functionTypeArgumentAssignmentCompat.ts:6:3
!!! annotated symbol 2 tests/cases/compiler/functionTypeArgumentAssignmentCompat.ts:2:3
!!! annotated symbol 3 tests/cases/compiler/functionTypeArgumentAssignmentCompat.ts:2:3
!!! annotated symbol 4 tests/cases/compiler/functionTypeArgumentAssignmentCompat.ts:2:3
!!! annotated symbol 5 tests/cases/compiler/functionTypeArgumentAssignmentCompat.ts:2:3
!!! annotated symbol 6 tests/cases/compiler/functionTypeArgumentAssignmentCompat.ts:2:3
!!! annotated symbol 7 tests/cases/compiler/functionTypeArgumentAssignmentCompat.ts:2:3
    var s = f("str").toUpperCase();
    
    console.log(s);
    